call adresses margin fixed on small screen

--- a/src/sass/_call.sass
+++ b/src/sass/_call.sass
@@ -18,6 +18,8 @@
 .call__adresses 
   display: flex
   justify-content: center
+  flex-direction: column
+  margin-bottom: 19px
 
 .call__adresses p
   margin: 0
@@ -33,3 +35,7 @@
 
 .call__warning p
   color: #a2a2a2
+
+@media (min-width: 380px)
+  .call__adresses
+    flex-direction: row 
