--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -30,7 +30,8 @@ h2
   line-height: 1.2
   text-transform: uppercase
   margin-bottom: 29px
-
+  text-align: center
+  
 h3
   @include default-font(18px)         
   color: rgb(255, 255, 255)
@@ -73,3 +74,7 @@ p
   color: white
   border: 2px solid  #707070
 
+
+@media (min-width: 960px)
+  h2
+    text-align: left
